[gd_scene load_steps=15 format=3 uid="uid://bhg30arf462b2"]

[ext_resource type="Script" path="res://scenes/ecs/parent/player.gd" id="1_8dtkr"]
[ext_resource type="PackedScene" uid="uid://du23o27jj4r7b" path="res://scenes/ecs/components/attack_component.tscn" id="2_jdd58"]
[ext_resource type="PackedScene" uid="uid://phsu6ymjua1f" path="res://scenes/ecs/parent/projectile.tscn" id="3_txjwt"]
[ext_resource type="PackedScene" uid="uid://bcn74yjmdii2d" path="res://scenes/ecs/components/health_component.tscn" id="4_kihhm"]
[ext_resource type="PackedScene" uid="uid://dl2pd45xbhiap" path="res://scenes/ecs/components/energy_component.tscn" id="5_ol0v8"]
[ext_resource type="PackedScene" uid="uid://brmcbnglv7fkd" path="res://scenes/ecs/components/ammo_component.tscn" id="6_d1kdd"]
[ext_resource type="Material" uid="uid://bo40hl0j5ntoj" path="res://visuals/materials/blue.tres" id="7_8bdnm"]
[ext_resource type="Texture2D" uid="uid://bupinxjkachkc" path="res://visuals/textures/grid_texture.png" id="8_e3yvi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2dksx"]

[sub_resource type="SphereMesh" id="SphereMesh_yfg4t"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_t7n0x"]

[sub_resource type="SphereShape3D" id="SphereShape3D_prgwb"]

[sub_resource type="SphereMesh" id="SphereMesh_ywjr5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q25dp"]
transparency = 1
albedo_color = Color(0.0823529, 0.635294, 1, 0.121569)
albedo_texture = ExtResource("8_e3yvi")
uv1_triplanar = true
uv1_world_triplanar = true

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("_fire_point")]
collision_layer = 4096
collision_mask = 2175
script = ExtResource("1_8dtkr")
_fire_point = NodePath("FirePoint")
_rotation_speed = 30.0

[node name="Components" type="Node" parent="."]

[node name="AttackComponent" parent="Components" instance=ExtResource("2_jdd58")]
_primary_attack_scene = ExtResource("3_txjwt")

[node name="HealthComponent" parent="Components" instance=ExtResource("4_kihhm")]

[node name="EnergyComponent" parent="Components" instance=ExtResource("5_ol0v8")]

[node name="AmmoComponent" parent="Components" instance=ExtResource("6_d1kdd")]

[node name="PrimaryCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0403, 0)
shape = SubResource("CapsuleShape3D_2dksx")

[node name="FirePoint" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1, -0.998297)
mesh = SubResource("SphereMesh_yfg4t")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("7_8bdnm")

[node name="PlayerMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01197, 0)
mesh = SubResource("CapsuleMesh_t7n0x")
surface_material_override/0 = ExtResource("7_8bdnm")

[node name="DetectionArea" type="Area3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 1, 0)
collision_layer = 0
collision_mask = 0

[node name="DetectionCollider" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_prgwb")

[node name="DetectionMesh" type="MeshInstance3D" parent="DetectionArea"]
mesh = SubResource("SphereMesh_ywjr5")
surface_material_override/0 = SubResource("StandardMaterial3D_q25dp")
